--- a/HooHacks/package.json
+++ b/HooHacks/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^10.0.0",
     "@freakycoder/react-native-helpers": "0.1.0",
     "@react-native-community/masked-view": "0.1.5",
+    "@react-native-firebase/app": "^6.3.4",
     "@react-navigation/bottom-tabs": "^5.0.0",
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
